[package]
name = "Final_Project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { package = "gtk4", version = "0.6" }
petgraph = "0.6.0"
graphviz-rust = "0.6.1"
dot = "0.1.4"
rand = "0.8.5"
plotters = "0.3.5"

